--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
             ps-size="50vw">
             <div>
                 <nav class="Navigation">
+                    <a class="Navigation__link" href="#" ng-click="showMenu = false" scroll-to="about-festival">About the Festival</a>
                     <a class="Navigation__link" href="#" ng-click="showMenu = false" scroll-to="performers-instructors">Performers &amp; Instructors</a>
                     <a class="Navigation__link" href="#" ng-click="showMenu = false" scroll-to="location-directions">Location &amp; Directions</a>
                     <a class="Navigation__link" href="#" ng-click="showMenu = false" scroll-to="schedule-workshops">Schedule &amp; Workshops</a>
@@ -60,7 +61,7 @@
                 <strong>Home of the West Virginia State Flatpick Guitar Contest</strong><br>
                 <small>&amp; part of Heritage Farm Museum and Village's "Way Back" Music Weekend</small>
                 <br><br>
-                <button scroll-to="tickets-admission">Purchase Tickets</button>
+                <button scroll-to="tickets-admission">Tickets &amp; Admission</button>
             </div>
 
         </header>
@@ -68,6 +69,14 @@
         <hr>
 
         <main>
+            <section id="about-festival" class="grid-container">
+                <h3>About the festival</h3>
+                <h4 class="blue">Our mission is to celebrate the traditions of passing on musical heritage in the mountain state.</h4>
+                <br>
+                <p>The Robin Kessinger Festival is pleased to announce the 2016 festival, to be held in conjunction with the Heritage Farm Museum and Village's "Way Back Weekend" on June 3 &amp; 4.  In addition to Friday and Saturday concerts, the WV State Flatpick Guitar Contest on Saturday, and traditional music workshops Saturday morning, the Heritage Farm venue offers a peek back in time for the whole family. Interact with life as it was in Appalachia from thee 1800’s through the early 1900’s in award winning exhibits that include over 20 buildings, as well as enjoy the music – which will be scattered through the farm as well. And don’t forget to visit the Mountain Men’s camp to see how our first settlers lived.</p>
+                <p>We promote and encourage people to support West Virginia’s musical heritage as well as expose them to a variety of musical styles. Our hope is that everyone who attends our festival will go home with fond memories of the celebration of music, the beauty of our state, and the good times with old and new friends.</p>
+            </section>
+            <hr>
             <section id="performers-instructors" class="grid-container">
                 <h3>Performers &amp; Instructors</h3>
                 <p class="blue align-center">(Click each name for more information)</p>
@@ -164,6 +173,8 @@
                 <div class="grid-row">
                     <div class="grid-half">
                         <h4 class="blue">Prizes</h4>
+                        <br>
+                        <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="#" modal tpl="bios/walnut-valley">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
                         <ul class="Prizes">
                             <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="#" modal tpl="bios/craig-southern">Craig Southern</a> custom-made dreadnaught.</li>
                             <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="#" modal tpl="bios/fret-and-fiddle">Fret and Fiddle</a></li>
@@ -197,6 +208,12 @@
                 <h3>Contact Us</h3>
             </section>
         </main>
+
+        <hr>
+
+        <footer class="Footer">
+            <p class="align-center grey Footer__copyright">COPYRIGHT &copy; 2016 ROBIN KESSINGER FESTIVAL &amp; WORKSHOPS</p>
+        </footer>
     </div>
 
     <script src="/app.js"></script>
