--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="en" ng-app="rkf2016">
+<html class="no-js" lang="en" ng-app="rkf2016" ng-strict-di>
 
 <head>
     <meta charset="utf-8">
@@ -81,17 +81,15 @@
                 <h3>Performers &amp; Instructors</h3>
                 <p class="blue align-center">(Click each name for more information)</p>
                 <div class="Names">
-                    <a href="#" modal tpl="bios/robin-kessinger" class="Names__name red">Robin Kessinger</a>
-                    <a href="#" modal tpl="bios/wayne-henderson" class="Names__name darkyellow">Wayne Henderson</a>
-                    <a href="#" modal tpl="bios/robert-shafer" class="Names__name blue">Robert Shafer</a>
-                    <a href="#" modal tpl="bios/dan-kessinger" class="Names__name orange">Dan Kessinger</a>
-                    <a href="#" modal tpl="bios/roger-rabalais" class="Names__name red">Roger Rabalais</a>
-                    <a href="#" modal tpl="bios/jodi-harbin" class="Names__name darkyellow">Jodi Harbin</a>
-                    <a href="#" modal tpl="bios/tim-harbin" class="Names__name blue">Tim Harbin</a>
-                    <a href="#" modal tpl="bios/karl-hepler" class="Names__name orange">Karl Hepler</a>
-                    <a href="#" modal tpl="bios/jesse-smith" class="Names__name red">Jesse Smith</a>
-                    <a href="#" modal tpl="bios/allen-shadd" class="Names__name darkyellow">Allen Shadd</a>
-                    <a href="#" modal tpl="bios/and-more" class="Names__name blue">... and more!</a>
+                    <a href="#" ng-repeat="(index, biography) in biographies | filter:{performer:true} track by $index"
+                        modal biography="biography"
+                        class="Names__name"
+                        ng-class="{
+                            red: index % 4 === 0,
+                            darkyellow: index % 4 === 1,
+                            blue: index % 4 === 2,
+                            orange: index % 4 === 3
+                        }">{{ biography.name }}</a>
                 </div>
             </section>
             <hr>
@@ -174,10 +172,10 @@
                     <div class="grid-half">
                         <h4 class="blue">Prizes</h4>
                         <br>
-                        <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="#" modal tpl="bios/walnut-valley">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
+                        <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="#" modal biography="(biographies|filter:{name:'Walnut Valley Festival'})[0]">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
                         <ul class="Prizes">
-                            <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="#" modal tpl="bios/craig-southern">Craig Southern</a> custom-made dreadnaught.</li>
-                            <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="#" modal tpl="bios/fret-and-fiddle">Fret and Fiddle</a></li>
+                            <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="#" modal biography="(biographies|filter:{name:'Craig Southern'})[0]">Craig Southern</a> custom-made dreadnaught.</li>
+                            <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="#" modal biography="(biographies|filter:{name:'Fret & Fiddle'})[0]">Fret &amp; Fiddle</a></li>
                             <li class="Prizes__prize"><span class="Prizes__place">3rd Place</span> Sigma OM (Rosewood) with K&amp;K pickup</li>
                         </ul>
                     </div>
