--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Robin Kessinger Festival & Workshops</title>
+    <meta name="description" content="Home of the west virginia state flatpick guitar contest &amp; part of heritage farm museum and village's \"way back\" music weekend.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="HandheldFriendly" content="true">
     <meta name="robots" content="noindex, nofollow">
@@ -22,8 +22,7 @@
     <div class="content">
         <button class="Hamburger Hamburger--htx"
             ng-class="{'is-active': showMenu}"
-            ng-click="showMenu = !showMenu"
-            ng-init="showMenu = false">
+            ng-click="showMenu = !showMenu">
             <span>toggle menu</span>
         </button>
         <pageslide
@@ -59,7 +58,7 @@
             </div>
             <div class="Header__tagline">
                 <strong>Home of the West Virginia State Flatpick Guitar Contest</strong><br>
-                <small>&amp; part of Heritage Farm Museum and Village's "Way Back" Music Weekend</small>
+                <small>&amp; part of <a href="http://heritagefarmmuseum.com" target="_blank">Heritage Farm Museum and Village's</a> "Way Back" Music Weekend</small>
                 <br><br>
                 <button scroll-to="tickets-admission">Tickets &amp; Admission</button>
             </div>
@@ -90,13 +89,16 @@
                             blue: index % 4 === 2,
                             orange: index % 4 === 3
                         }">{{ biography.name }}</a>
+                    <span class="Names__name grey">... and more!</span>
                 </div>
             </section>
             <hr>
             <section id="location-directions" class="grid-container">
                 <h3>Location &amp; Directions</h3>
-                <h4 class="orange">Heritage Farm Musem &amp; Village</h4>
+                <h4><a class="orange" href="http://heritagefarmmuseum.com" target="_blank">Heritage Farm Museum &amp; Village</a></h4>
                 <p class="align-center blue"><strong>3300 Harvey Rd, Huntington, WV 25704</strong></p>
+                <p class="align-center"><a href="http://heritagefarmmuseum.com" target="_blank">Heritage Farms</a> has set aside the New Barn and retreat Center for patrons of our festival.</p>
+                <p class="align-center"><strong>Contact Heritage Farms for reservations 304-522-1244</strong></p>
                 <br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3127.814163979372!2d-82.46941108463635!3d38.376420279654255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8845e22ef865d447%3A0x689d353752128932!2sHeritage+Farm+Museum+%26+Village!5e0!3m2!1sen!2sus!4v1461532013296" width="100%" height="300" marginheight="0" marginwidth="0" frameborder="0" scrolling="no" style="border:0" allowfullscreen></iframe>
                 <br><br>
@@ -115,21 +117,19 @@
                         </div>
                         <div class="Schedule__events">
                             <div class="Schedule__event">
-                                <div class="Schedule__time">11:00 am</div>
+                                <div class="Schedule__time">4:00 pm</div>
                                 <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
+                                    Gates Open
                                 </p>
                             </div>
                             <div class="Schedule__event">
-                                <div class="Schedule__time">12:00 pm</div>
+                                <div class="Schedule__time">6:30 pm</div>
                                 <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
-                                </p>
-                            </div>
-                            <div class="Schedule__event">
-                                <div class="Schedule__time">1:00 pm</div>
-                                <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
+                                    Evening concerts with
+                                    <a href="#" modal biography="(biographies|filter:{name:'Robin Kessinger'})[0]">Robin Kessinger</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Robert Shafer'})[0]">Robert Shafer</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Dan Kessinger'})[0]">Dan Kessinger</a>,
+                                    and <a href="#" modal biography="(biographies|filter:{name:'Roger Rabalais'})[0]">Rober Rabalais</a>.
                                 </p>
                             </div>
                         </div>
@@ -144,21 +144,42 @@
                         </div>
                         <div class="Schedule__events">
                             <div class="Schedule__event">
-                                <div class="Schedule__time">11:00 am</div>
+                                <div class="Schedule__time">10:00 am - 12:00 pm</div>
                                 <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
+                                    <h4 class="align-left">Workshops</h4>
+                                    <br>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Dan Kessinger'})[0]">Dan Kessinger</a> - <strong>FIDDLE</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Jodi Harbin'})[0]">Jodi Harbin</a> - <strong>MANDOLIN</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Tim Harbin'})[0]">Tim Harbin</a> - <strong>GUITAR</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Karl Hepler'})[0]">Karl Hepler</a> - <strong>Flatpick, Celtic Rhythm</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Jesse Smith'})[0]">Jesse Smith</a> - <strong>Interaction of fingerpicking guitar with bluegrass guitar</strong></p>
                                 </p>
                             </div>
                             <div class="Schedule__event">
-                                <div class="Schedule__time">12:00 pm</div>
+                                <div class="Schedule__time">10:00 am - 12:30 pm</div>
                                 <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
+                                    Late contest registration
                                 </p>
                             </div>
                             <div class="Schedule__event">
                                 <div class="Schedule__time">1:00 pm</div>
                                 <p class="Schedule__description">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate possimus eligendi in odit est natus deleniti necessitatibus, nostrum, atque, at ad quas asperiores repellat mollitia officiis a ex quidem maxime.
+                                    <strong>WV State Flatpick Guitar Contest</strong>
+                                    <br><br>
+                                    Open Mic from end of contest to presentation of awards
+                                </p>
+                            </div>
+                            <div class="Schedule__event">
+                                <div class="Schedule__time">4:00 pm</div>
+                                <p class="Schedule__description">
+                                    Evening concerts with
+                                    <a href="#" modal biography="(biographies|filter:{name:'Wayne Henderson'})[0]">Wayne Henderson</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Jodi Harbin'})[0]">Jodi</a>
+                                    and <a href="#" modal biography="(biographies|filter:{name:'Tim Harbin'})[0]">Tim Harbin</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Karl Hepler'})[0]">Karl Hepler</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Allen Shadd'})[0]">Allen Shadd</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Dan Kessinger'})[0]">Dan Kessinger</a>,
+                                    and special guests.
                                 </p>
                             </div>
                         </div>
@@ -172,10 +193,10 @@
                     <div class="grid-half">
                         <h4 class="blue">Prizes</h4>
                         <br>
-                        <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="#" modal biography="(biographies|filter:{name:'Walnut Valley Festival'})[0]">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
+                        <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="https://wvfest.com" target="_blank">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
                         <ul class="Prizes">
                             <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="#" modal biography="(biographies|filter:{name:'Craig Southern'})[0]">Craig Southern</a> custom-made dreadnaught.</li>
-                            <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="#" modal biography="(biographies|filter:{name:'Fret & Fiddle'})[0]">Fret &amp; Fiddle</a></li>
+                            <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="http://www.fretnfiddle.com" target="_blank">Fret 'n Fiddle</a></li>
                             <li class="Prizes__prize"><span class="Prizes__place">3rd Place</span> Sigma OM (Rosewood) with K&amp;K pickup</li>
                         </ul>
                     </div>
@@ -200,17 +221,27 @@
             <hr>
             <section id="tickets-admission" class="grid-container">
                 <h3>Tickets &amp; Admission</h3>
+                <h4 class="blue">$15 or $25 Weekend</h4>
+                <br><br>
+                <p class="align-center red uppercase"><strong>12 &amp; under FREE/accompanied by an adult</strong></p>
+                <p class="align-center red uppercase"><strong>No refunds</strong></p>
+                <p class="align-center red uppercase"><strong>No Alcohol</strong></p>
+                <p class="align-center red uppercase"><strong>Limited Concessions</strong></p>
             </section>
             <hr>
             <section id="contact-us" class="grid-container">
                 <h3>Contact Us</h3>
+                <h4>Kayce Gentry <a href="tel:3049271415">(304) 927-1415</a></h4>
+                <br>
+                <h4>June Kessinger <a href="tel:3045935650">(304) 593-5650</a></h4>
+                <br>
             </section>
         </main>
 
         <hr>
 
         <footer class="Footer">
-            <p class="align-center grey Footer__copyright">COPYRIGHT &copy; 2016 ROBIN KESSINGER FESTIVAL &amp; WORKSHOPS</p>
+            <p class="align-center grey Footer__copyright">COPYRIGHT &copy; {{ currentYear }} ROBIN KESSINGER FESTIVAL &amp; WORKSHOPS</p>
         </footer>
     </div>
 
