--- a/public/index.html
+++ b/public/index.html
@@ -149,8 +149,8 @@
                                     <h4 class="align-left">Workshops</h4>
                                     <br>
                                     <p><a href="#" modal biography="(biographies|filter:{name:'Dan Kessinger'})[0]">Dan Kessinger</a> - <strong>FIDDLE</strong></p>
-                                    <p><a href="#" modal biography="(biographies|filter:{name:'Jodi Harbin'})[0]">Jodi Harbin</a> - <strong>MANDOLIN</strong></p>
-                                    <p><a href="#" modal biography="(biographies|filter:{name:'Tim Harbin'})[0]">Tim Harbin</a> - <strong>GUITAR</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Jodi & Tim Harbin'})[0]">Jodi Harbin</a> - <strong>MANDOLIN</strong></p>
+                                    <p><a href="#" modal biography="(biographies|filter:{name:'Jodi & Tim Harbin'})[0]">Tim Harbin</a> - <strong>GUITAR</strong></p>
                                     <p><a href="#" modal biography="(biographies|filter:{name:'Karl Hepler'})[0]">Karl Hepler</a> - <strong>Flatpick, Celtic Rhythm</strong></p>
                                     <p><a href="#" modal biography="(biographies|filter:{name:'Jesse Smith'})[0]">Jesse Smith</a> - <strong>Interaction of fingerpicking guitar with bluegrass guitar</strong></p>
                                 </p>
@@ -174,8 +174,7 @@
                                 <p class="Schedule__description">
                                     Evening concerts with
                                     <a href="#" modal biography="(biographies|filter:{name:'Wayne Henderson'})[0]">Wayne Henderson</a>,
-                                    <a href="#" modal biography="(biographies|filter:{name:'Jodi Harbin'})[0]">Jodi</a>
-                                    and <a href="#" modal biography="(biographies|filter:{name:'Tim Harbin'})[0]">Tim Harbin</a>,
+                                    <a href="#" modal biography="(biographies|filter:{name:'Jodi & Tim Harbin'})[0]">Jodi &amp; Tim Harbin</a>,
                                     <a href="#" modal biography="(biographies|filter:{name:'Karl Hepler'})[0]">Karl Hepler</a>,
                                     <a href="#" modal biography="(biographies|filter:{name:'Allen Shadd'})[0]">Allen Shadd</a>,
                                     <a href="#" modal biography="(biographies|filter:{name:'Dan Kessinger'})[0]">Dan Kessinger</a>,
@@ -195,7 +194,7 @@
                         <br>
                         <p class="align-center">The contest winner will receive paid entry to the national flatpick contest at the <a href="https://wvfest.com" target="_blank">Walnut Valley Festival</a>, Winfield, KS – Sept. 14 – 18, 2016</p>
                         <ul class="Prizes">
-                            <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="#" modal biography="(biographies|filter:{name:'Craig Southern'})[0]">Craig Southern</a> custom-made dreadnaught.</li>
+                            <li class="Prizes__prize"><span class="Prizes__place">1st Place</span> <a class="Prizes__link" href="https://www.facebook.com/Craig-Southern-Guitars-162117127210699" target="_blank">Craig Southern</a> custom-made dreadnaught.</li>
                             <li class="Prizes__prize"><span class="Prizes__place">2nd Place</span> Blueridge dreadnaught guitar (Rosewood) from <a class="Prizes__link" href="http://www.fretnfiddle.com" target="_blank">Fret 'n Fiddle</a></li>
                             <li class="Prizes__prize"><span class="Prizes__place">3rd Place</span> Sigma OM (Rosewood) with K&amp;K pickup</li>
                         </ul>
