changed hall of fame to past winners

--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
                     </div>
                 </div>
                 <div class="HallOfFame">
-                    <h4 class="HallOfFame__title">Hall of Fame</h4>
+                    <h4 class="HallOfFame__title">Past Winners</h4>
                     <ul class="HallOfFame__winners">
                         <li class="HallOfFame__winner blue"><span class="HallOfFame__year">2014</span> Allen Shadd</li>
                         <li class="HallOfFame__winner darkyellow"><span class="HallOfFame__year">2013</span> Matt Lindsey</li>
